syntax = "proto3";

package go.micro.srv.PostAvatar;

service PostAvatar {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	// 1 二进制图片流
	bytes Avatar = 1;
	// 2 文件大小 判断是否被篡改
	int64 FileSize = 2;
	// 3 文件后缀
	string FileExt = 3;
	// 4 sessionid
	string SessionId = 4;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	// 不完整的头像地址
	string AvatarUrl = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
